Aplicando SASSII+SEO

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcuts icon" href="./assets/icon.ico.jpg" /> 
     <link rel="stylesheet" href="./css/stylo.css">
-    <title>Buracco</title>
+    <title>Buracco-Inicio</title>
+    <meta name="description" content="Resto-bar">
+    <meta name="keywords" content="Resto,bar,cena show,diversion">
+
+    <script src="https://kit.fontawesome.com/5defac5f80.js" crossorigin="anonymous"></script>
    
  </head>
  <body>
@@ -34,6 +38,12 @@
    </main>
     <footer>
         <h5 class="copy">© Copyright - 2017 - 2022 www.buracco.com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www..com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual.</h5>
+         <div class="copy2">
+                <i class="fab fa-cc-visa"></i>
+               <i class="fab fa-cc-mastercard"></i>
+                <i class="fab fa-qrcode"></i>
+                <i class="fab fa-moped"></i>
+          </div>
     </footer>
 </body>
 </html>
