--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcuts icon" href="../assets/icon.ico.jpg" /> 
-    <link rel="stylesheet" href="../style.css">
-    <title>Contacto</title>
+    <link rel="stylesheet" href="../css/stylo.css">
+    <title>Buracco-Contacto</title>
+    <meta name="keywords" content="Resto,bar,cena show,diversion">
+    <meta name="description" content="Contactanos para tu reserva">
 </head>
  <body>
     <header>
@@ -44,6 +46,12 @@
       </main>
     <footer>
       <h5 class="copy">© Copyright - 2017 - 2022 www..com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www..com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual.</h5>
+       <div class="copy2">
+           <i class="fab fa-cc-visa"></i>
+            <i class="fab fa-cc-mastercard"></i>
+            <i class="fab fa-qrcode"></i>
+            <i class="fab fa-moped"></i>
+       </div>
     </footer>
  </body>
 </html>
