--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcuts icon" href="../assets/icon.ico.jpg" /> 
-    <link rel="stylesheet" href="../style.css">
-    <title>nosotros</title>
+    <link rel="stylesheet" href="../css/stylo.css">
+    <title>Buracco-nosotros</title>
+    <meta name="keywords" content="Resto,bar,cena show,diversion">
+    <meta name="description" content="Te contamos un poquito de nuestra historia">
 </head>
 <body>
     <header>
@@ -25,7 +27,7 @@
   <section class="caja5">
       <img class="fuente4" src="../assets/hambur.jpg" alt="Imagen buracco" width="500" />
   </section>
-  <section caja6>
+  <section class= "caja6">
      <h3 class="fuente">Bienvenidos.</h3>
      <hr>
      <h3 class="fuente2"> Buracco es un resto-bar con más de 5 sucursales en diferentes localidades. 
@@ -35,6 +37,12 @@
   <hr>
   <footer>
       <h5 class="copy">© Copyright - 2017 - 2022 www..com.ar, TODOS LOS DERECHOS RESERVADOS. Las fotos contenidas en este site, el logotipo y las marcas son propiedad de www..com.ar y/o de sus respectivos titulares. Está prohibida la reproducción total o parcial, sin la expresa autorización de la administradora de la tienda virtual.</h5>
-    </footer>
+     <div class="copy2">
+           <i class="fab fa-cc-visa"></i>
+          <i class="fab fa-cc-mastercard"></i>
+           <i class="fab fa-qrcode"></i>
+           <i class="fab fa-moped"></i>
+     </div>
+  </footer>
 </body>
 </html>
